--- a/index.htm
+++ b/index.htm
@@ -52,7 +52,8 @@
 
 
 
-                <button type="submit" id="sendNow">Send Now</button>
+                <button type="submit" id="sendNow" onclick="formSubmit()">Send Now</button>
+                <button type="reset" id="resetBtn">Reset</button>
 
             </form>
         </div>
